samples/_failures_safe/1761160288_62232b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5abbead3.c: In function ‘main’:
./samples/SAFE/__tmp_5abbead3.c:167:14: error: expected ‘;’ at end of input
  167 |         input
      |              ^
      |              ;
./samples/SAFE/__tmp_5abbead3.c:167:9: error: expected declaration or statement at end of input
  167 |         input
      |         ^~~~~
./samples/SAFE/__tmp_5abbead3.c:167:9: error: expected declaration or statement at end of input
